--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
             <br>
         <article class= "container">
             <div class="container">
+                <br>
+                <article class="container">
+                <p>
+                    <H2 class="mb-5">Some great years are behind me, and even better years are ahead. After working very hard for a company who cared very little I decided to take a left turn. So from sales to web development I went. This was a bigger step then I'm letting on; from moving across the country, to giving up almost all of my material possessions, this has been a thrilling chapter of my life. </H2>
+                    <h3 class="mb-5">I'm not a very complicated person. If someone were to make a trivia game about me, it would be short and boring lol. You could get most the right answers from the below.</h3></p>
+                <br>
                 <div class="row row-cols-2">
                 <div class="col">
                     <picture>
@@ -108,7 +114,7 @@
                             <strong>More?</strong>
                         </h2>
                             <p>
-                                There is so much more! Head over to my Portfolio, link in Nav bar above, to see some other things that I'm passionate about. 
+                                Head over to my Portfolio, link in Nav bar above, to see some other things that I'm passionate about. 
                             </p>
                             <br>
                             <br>
