--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="utf-8">
+        <html lang="en-US"
         <link rel="icon" type="image/png" href="./assets/mr-logo-icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Biography">
