--- a/contact.html
+++ b/contact.html
@@ -51,9 +51,13 @@
         <br>
         <body>
             <p class="text-center">
-                <strong><A HREF = "https://www.facebook.com/michael.rudolph.3939/" target="_blank">Me on Facebook</A> </strong>
+                <strong><A HREF = "https://github.com/ReindeerCode" target="_blank">Me on Git Hub</A></strong>
+                <br>
+                <strong><A HREF = "https://github.com/ReindeerCode" target="_blank">Me on Git Hub</A></strong><strong><A HREF = "https://www.facebook.com/michael.rudolph.3939/" target="_blank">Me on Facebook</A> </strong>
                 <br>    
                 <strong><A HREF = "https://www.linkedin.com/in/a-michael-rudolph/" target="_blank">Me on LinkedIn</A></strong>
+                <br>    
+
             </p>
             <div class="container">
                 <div class="row">
