Fixed Sticky Footer on HTML and CSS

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,5 @@
 <!--Template used from https://codepen.io/ImBobby/pen/mxqKL-->
+<!--Worked with Ethan Wager and Aren Salmela-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -21,88 +22,92 @@
     </head>
 
     <body>
-        <header class="clearfix">
-            <div class="container">
-                    <div class="header-left">
-                        <h1>Michael Rudolph</h1>
-                    </div>
-                    <div class="header-right">
-                        <label for="open">
-                            <span class="hidden-desktop"></span>
-                        </label>
-                        <input type="checkbox" name="" id="open">
-                        <nav>
-                            <a href="index.html">Home</a>
-                            <a href="portfolio.html">Portfolio</a>
-                            <a href="contact.html">Contact</a>
-                        </nav>
-                    </div>
-                </div>
-            </header>
-        <section class="clearfix">
+        <div class="content">
+            <header class="clearfix">
                 <div class="container">
-                    <div class="section-left">
-                        <h1 class="section-title">Portfolio</h1>
+                        <div class="header-left">
+                            <h1>Michael Rudolph</h1>
+                        </div>
+                        <div class="header-right">
+                            <label for="open">
+                                <span class="hidden-desktop"></span>
+                            </label>
+                            <input type="checkbox" name="" id="open">
+                            <nav>
+                                <a href="index.html">Home</a>
+                                <a href="portfolio.html">Portfolio</a>
+                                <a href="contact.html">Contact</a>
+                            </nav>
+                        </div>
                     </div>
-                </div>
-            </section>
-            <br>
-            <article class="container">
-            <p><h2>Below are photos of some of the things that I'm passionate about.</h2></p>
-            <br>
-            <div class="img-fluid">
-                <article class= "container">
-                        <div class="row row-cols-2">
-                        <div class="col">
-                            <p class="text-center">
+                </header>
+            <section class="clearfix">
+                    <div class="container">
+                        <div class="section-left">
+                            <h1 class="section-title">Portfolio</h1>
+                        </div>
+                    </div>
+                </section>
+                <br>
+                <article class="container">
+                <p><h2>Below are photos of some of the things that I'm passionate about.</h2></p>
+                <br>
+                <div class="img-fluid">
+                    <article class= "container">
+                            <div class="row row-cols-2">
+                            <div class="col">
+                                <p class="text-center">
+                                            <p>
+                                                <div class="card">
+                                                    <img src="./assets/Crossfit.jpg" class="card-img-top" alt="Image of two friends enjoying a hard workout.">
+                                                    <div class="card-body">
+                                                    <p class="card-text">Crossfit</p>
+                                                    <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
+                                                    </div>
+                                                </div>
+                                            </p>
+                                </div>
+                            <div class="col">
                                         <p>
                                             <div class="card">
-                                                <img src="./assets/Crossfit.jpg" class="card-img-top" alt="Image of two friends enjoying a hard workout.">
+                                                <img src="./assets/Coding.jpg" class="card-img-top" alt="Image of laptop with code on screen"> 
                                                 <div class="card-body">
-                                                <p class="card-text">Crossfit</p>
+                                                <p class="card-text">Web Development</p>
+                                                <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
+                                                </div>
+                                            </div>
+                                </div>
+                            <div class="col">
+                                        <p>
+                                            <div class="card">
+                                                <img src="./assets/Nature.jpg" class="card-img-top" alt="Image of beautiful forest">
+                                                <div class="card-body">
+                                                <p class="card-text">Nature</p>
+                                                <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
+                                                </div>
+                                            </div>
+                                        </p>
+                                        <br>
+                                        <br>
+                                </div>
+                            <div class="col">
+                                        <p>
+                                            <div class="card" >
+                                                <img src="./assets/Dogs.jpg" class="card-img-top" alt="Image of adorable Siberian Husky">
+                                                <div class="card-body">
+                                                <p class="card-text">Dogs</p>
                                                 <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
                                                 </div>
                                             </div>
                                         </p>
+                                </div>
                             </div>
-                        <div class="col">
-                                    <p>
-                                        <div class="card">
-                                            <img src="./assets/Coding.jpg" class="card-img-top" alt="Image of laptop with code on screen"> 
-                                            <div class="card-body">
-                                            <p class="card-text">Web Development</p>
-                                            <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
-                                            </div>
-                                        </div>
-                            </div>
-                        <div class="col">
-                                    <p>
-                                        <div class="card">
-                                            <img src="./assets/Nature.jpg" class="card-img-top" alt="Image of beautiful forest">
-                                            <div class="card-body">
-                                            <p class="card-text">Nature</p>
-                                            <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
-                                            </div>
-                                        </div>
-                                    </p>
-                                    <br>
-                                    <br>
-                            </div>
-                        <div class="col">
-                                    <p>
-                                        <div class="card" >
-                                            <img src="./assets/Dogs.jpg" class="card-img-top" alt="Image of adorable Siberian Husky">
-                                            <div class="card-body">
-                                            <p class="card-text">Dogs</p>
-                                            <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
-                                            </div>
-                                        </div>
-                                    </p>
-                            </div>
-                        </div>
-                </article>
+                    </article>
+    
+            </article>
 
-        </article>
+        </div>
+
     </body>
 
         <br>
